--- a/client/style.css
+++ b/client/style.css
@@ -13,8 +13,8 @@
     padding-top: 20px;
 }
 input {
-    width: 50%;
-    min-width: 200px;
+    /* width: 200px; */
+    min-width: 25vw;
     height: 40px;
     background-color: white;
     border: 1px solid red;
