--- a/client/nav.css
+++ b/client/nav.css
@@ -56,7 +56,7 @@ nav .wrapper {
   background: #3A3B3C;
 }
 
-input{
+#searchbar{
   width: 200px;
   height: 40px;
   border-radius: 999px;
@@ -64,7 +64,7 @@ input{
   background-color: #525557;
   border: 2px solid white;
 }
-input:hover{
+#searchbar:hover{
   background-color: white;
   border: 2px solid greenyellow;
 }
